--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
       </div>
       <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-             <li><a>About</a></li>
+             <li><a href="#about">About</a></li>
       <li>
         <details>
           <summary>Projects</summary>
           <ul class="p-2">
-            <li><a>Eclipse / Echo</a></li>
+            <li><a href="projects/eclipse.html">Eclipse / Echo</a></li>
      
-            <li><a>TJVS Clips</a></li>
-            <li><a>Circuit</a></li>
+            <li><a href="projects/tjvs.html">TJVS Clips</a></li>
+            <li><a href="projects/circuit.html">Circuit</a></li>
           </ul>
         </details>
       </li>
-      <li><a>Music</a></li>
+      <li><a href="music.html">Music</a></li>
       </ul>
     </div>
     <a class="btn btn-ghost text-xl"><img src="https://i.ibb.co/MZWVZKF/image.png" width="50" id="logo"></a>
@@ -62,7 +62,7 @@
 <div class="hero min-h-screen bg-base-300 p-20">
   <div class="hero-content flex-col lg:flex-row-reverse gap-20">
     <div>
-      <h1 class="text-5xl font-bold">About Me</h1>
+      <h1 class="text-5xl font-bold" id="about">About Me</h1>
       <p class="py-6">I use the nickname TRIS a lot, but my real name is Tristan. I like to make music and websites, and I sometimes make animations, but not that often anymore.</p>
       <p class="py-6">I have been learning Node.js, HTML/CSS/JS, and more since I was 8 years old. Time really does fly! I've made Pop/R&B-style music for about a year, and chiptune music for 2 years.</p>
     </div>
