--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <details>
           <summary>Projects</summary>
           <ul class="p-2">
-            <li><a>Eclipse / Echo</a></li>
+            <li><a href="projects/eclipse.html">Eclipse / Echo</a></li>
      
-            <li><a>TJVS Clips</a></li>
-            <li><a>Circuit</a></li>
+            <li><a href="projects/tjvs.html">TJVS Clips</a></li>
+            <li><a href="projects/circuit.html">Circuit</a></li>
           </ul>
         </details>
       </li>
-      <li><a>Music</a></li>
+      <li><a href="music.html">Music</a></li>
     </ul>
   </div>
   <div class="navbar-end">
