--- a/index.html
+++ b/index.html
@@ -46,8 +46,19 @@
       <li><a href="music.html">Music</a></li>
     </ul>
   </div>
-  <div class="navbar-end">
-    <a class="btn" onclick="toggleTheme()">Toggle Theme</a>
+   <div class="navbar-end">
+<div class="dropdown dropdown-end">
+  <div tabindex="0" role="button" class="btn m-1">
+    Theme
+    <svg width="12px" height="12px" class="h-2 w-2 fill-current opacity-60 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2048 2048"><path d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"></path></svg>
+  </div>
+  <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-base-100 rounded-box w-52">
+    <li><input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-block btn-ghost justify-start" aria-label="Default (sunset)" value="default"/></li>
+     <li><input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-block btn-ghost justify-start" aria-label="Dark" value="dark"/></li>
+    <li><input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-block btn-ghost justify-start" aria-label="Sunset" value="sunset"/></li>
+    <li><input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-block btn-ghost justify-start" aria-label="Aqua" value="aqua"/></li>
+  </ul>
+</div>
   </div>
 </div>
  <div class="hero min-h-screen bg-base-200">
