--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- Primary Meta Tags -->
+<title>Tristan Wentworth - TRIS</title>
+<meta name="title" content="Tristan Wentworth - TRIS" />
+<meta name="description" content="I am a 14 year old web developer and musician born in Toronto, ON. If you'd like, check out my website filled with some of my favorite projects." />
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="Tristan Wentworth - TRIS" />
+<meta property="og:description" content="I am a 14 year old web developer and musician born in Toronto, ON. If you'd like, check out my website filled with some of my favorite projects." />
+<meta property="og:image" content="https://i.ibb.co/MZWVZKF/image.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Tristan Wentworth - TRIS" />
+<meta property="twitter:description" content="I am a 14 year old web developer and musician born in Toronto, ON. If you'd like, check out my website filled with some of my favorite projects." />
+<meta property="twitter:image" content="https://i.ibb.co/MZWVZKF/image.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
   <div class="navbar bg-base-100">
