--- a/projects/eclipse.html
+++ b/projects/eclipse.html
@@ -31,7 +31,7 @@
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
-      <li><a>About</a></li>
+      <li><a href="/#about">About</a></li>
        <li>
         <details>
           <summary>Projects</summary>
@@ -43,7 +43,7 @@
           </ul>
         </details>
       </li>
-      <li><a href="../music.html">Music</a></li> 
+      <li><a href="/music.html">Music</a></li> 
     </ul>
   </div>
   <div class="navbar-end">
@@ -67,8 +67,8 @@
       <a></a>
       <div class="text-sm breadcrumbs">
   <ul>
-    <li><a href="/heyimtris/index.html">Home</a></li> 
-    <li><a href="/heyimtris/projects/index.html">Projects</a></li> 
+    <li><a href="/">Home</a></li> 
+    <li><a href="/projects/index.html">Projects</a></li> 
     <li>Eclipse/Echo</li>
   </ul>
 </div><br>
