--- a/projects/eclipse.html
+++ b/projects/eclipse.html
@@ -27,7 +27,7 @@
       <li><a href="../music.html">Music</a></li> 
       </ul>
     </div>
-    <a class="btn btn-ghost text-xl"><img src="https://i.ibb.co/xYw4qxM/image.png" width="50" id="logo"></a>
+    <a class="btn btn-ghost text-xl" href="/"><img src="https://i.ibb.co/xYw4qxM/image.png" width="50" id="logo"></a>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
