--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html data-theme="sunset">
+<html>
 <head>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
